added html section3

--- a/index.html
+++ b/index.html
@@ -297,6 +297,146 @@
                 </div>
             </section>
         </div>
+
+        <!--Roman section (beginning)-->
+
+        <h2 class="headphones_text"> Headphones </h2>
+      <img src="img/logo_3.svg" alt="logo_headphones" width="80px"class="logo_svg">
+    <p class="headphones_p">Shop your favorite headphones or contact us for help with the choice. </p>
+
+  <section>  
+   <section class="section_headphones"> 
+    <div class="headphones_carousel">
+      <div class="product">
+         <picture>
+            <img src="img/headphones_black.png" alt="girl1" width="250">
+        </picture>
+      <div class="details">
+          <b class="name"> AirPulse Rs45 </b>
+            <br>
+              <p class="price"> 195.00$ </p>
+      </div>
+          <div class="button_product">
+              <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+
+       <div class="product">
+         <picture>
+            <img src="img/headphones_blue.png" alt="girl1" width="250">
+           </picture>
+      <div class="details">
+          <b class="name"> AirPulse Rs45 </b>
+          <br>
+              <p class="price"> 195.00$ </p>
+      </div>
+          <div class="button_product">
+               <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+
+       <div class="product">
+         <picture>
+            <img src="img/jbl_white.png" alt="girl1" width="250">
+           </picture>
+      <div class="details">
+          <b class="name"> JBL 334WN </b>
+          <br>
+              <p class="price"> 195.00$ </p>
+      </div>
+          <div class="button_product">
+              <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+
+       <div class="product">
+         <picture>
+            <img src="img/headphones_rose.png" alt="girl1" width="250">
+           </picture>
+      <div class="details">
+          <b class="name"> AirPulse Rs45 </b>
+          <br>
+              <p class="price"> 195.00$ </p>
+      </div>
+          <div class="button_product">
+               <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+
+       <div class="product">
+         <picture>
+            <img src="img/headphones_white.png" alt="girl1" width="250">
+           </picture>
+      <div class="details">
+          <b class="name"> AirPulse BB34 </b>
+          <br>
+              <p class="price"> 99.00$ </p>
+      </div>
+          <div class="button_product">
+              <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+
+       <div class="product">
+         <picture>
+            <img src="img/headphones_blue.png" alt="girl1" width="250">
+           </picture>
+      <div class="details">
+          <b class="name"> Sonny TT45 </b>
+  
+              <p class="price"> 105.00$ </p>
+      </div>
+          <div class="button_product">
+              <a href="#" class="headphones_bottom">ADD TO CART</a>
+           </div>
+      </div>
+     </div>
+   </section>
+    <div class="span_div">
+      <span class="span_headphones">&#139;</span>
+      <span class="span_headphones">&#155;</span>
+    </div>
+  </section>
+
+  
+
+ <div class="headphones_sale">
+    <p class="best_price"> Best Price </p>
+   <img src="img/logo_3.svg" alt="logo_headphones" width="80px" class="logo_svg">
+ </div>
+  
+<div class="bg_image">
+ <div class="countdown_headphones">
+   <div> <p class="type_of_product">HEADPHONES</p> </div>
+   <p class="brand_apple">Apple Airpods Max</p>
+   <p class="price_apple_last">$350</p>
+   <p class="price_apple_new">$300</p>
+<div class="countdown_headphones_sale">
+  
+  <div class="countdown_sale">
+    <div class="day">time</div>
+      <h3 class="redaout">days</h3>
+  </div>
+
+  <div class="countdown_sale">
+    <div class="hour">time</div>
+      <h3 class="redaout">hours</h3>
+  </div>
+
+  <div class="countdown_sale">
+    <div class="minute">time</div>
+      <h3 class="redaout">minute</h3>
+  </div>
+
+  <div class="countdown_sale">
+    <div class="second">time</div>
+      <h3 class="redaout">seconds</h3>
+  </div>
+</div> 
+</div>
+</div>
+`        <!--Roman section (the end)-->
+
         <!--Fourth section (beginning)-->
         <section class="fourth-section">
             <div class="Speakers navigation-way_1">
