added js for js headphones section

--- a/index.html
+++ b/index.html
@@ -923,6 +923,7 @@
     <script src="js/roundreviews.js"></script>
     <script src="js/product-way.js"></script>
     <script src="js/audio-products-list.js"></script>
+    <script src="js/js-headphones-section.js"></script>
 </body>
 
 </html>
