--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="links">
                         <a href="" class="links__about">About us</a>
-                        <a href="" class="links__shop "><span>Shop now</span></a>
+                        <a href="" class="links__shop open-cart"><span>Shop now</span></a>
                     </div>
 
                 </div>
@@ -910,6 +910,44 @@
 
 
     </main>
+
+    <!-- MODAL CART -->
+    <section id="modal-cart" class="modal-cart">
+        <article class="modal-cart__body">
+            <div class="modal-cart__content">
+                <header class="modal-cart__header">
+                    <p class="modal-cart__title">Shopping cart</p>
+                    <a href="#" class="modal-cart__close-button close-cart"><span></span></a>
+                </header>
+                <div class="modal-cart__product-container">
+                    <article class="modal-cart-product">
+                        <img src="img/featured/gbl-gt.png" alt="">
+                        <p class="modal-cart-product__name">GBL-GT</p>
+                        <form action="#" method="GET">
+                            <input class="modal-cart-product__quantity" type="number" min="1" max="100"
+                                value="quantity">
+                        </form>
+                        <p class="modal-cart-product__price">$120</p>
+                        <button class="modal-cart-product__remove">x</button>
+                    </article>
+                    <p class="modal-cart-product__total-price">Total price:</p>
+                </div>
+                <form class="modal-cart__form" action="#" method="POST" enctype="multipart/form-data">
+                    <label class="modal-cart__label" for="name">Name</label>
+                    <input class="modal-cart__input" id="name" type="text" placeholder="Your name" required>
+                    <label class="modal-cart__label" for="email">Email</label>
+                    <input class="modal-cart__input" type="text" placeholder="Your email adress" required>
+                    <label class="modal-cart__label" for="phone">Phone</label>
+                    <input class="modal-cart__input" type="number" value="phone" placeholder="Your phone" required>
+                    <label class="modal-cart__label" for="comments">Comments</label>
+                    <textarea class="modal-cart__input" name="comments" id="comments" placeholder="Your comments"
+                        cols="30" rows="10"></textarea>
+                    <button class="modal-cart__button" type="submit">Order</button>
+                </form>
+            </div>
+        </article>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
@@ -921,6 +959,7 @@
     <script src="js/roundreviews.js"></script>
     <script src="js/product-way.js"></script>
     <script src="js/audio-products-list.js"></script>
+    <script src="js/modal-cart.js"></script>
     <script src="js/js-headphones-section.js"></script>
 </body>
 
