Worked with cart

--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@
     <script src="js/countdown-clock-time.js"></script>
     <script src="js/roundreviews.js"></script>
     <script src="js/product-way.js"></script>
-    <script src="js/audio-products-list.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/modal-cart.js"></script>
     <script src="js/js-headphones-section.js"></script>
 </body>
