Added cart icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="links">
                         <a href="" class="links__about">About us</a>
-                        <a href="" class="links__shop open-cart"><span>Shop now</span></a>
+                        <a href="" class="links__shop"><span>Shop now</span></a>
                     </div>
 
                 </div>
@@ -78,6 +78,9 @@
     </header>
     <main>
         <!--Special offers and services section-->
+
+        <a class="cart-link open-cart add-padding" href="#"><img src="img/icons/cart-icon.png" alt="cart icon"><span
+                id="cart-badge" class="badge"></span></a>
         <section class="first-section">
             <div class="services container">
                 <div class="services__type">
@@ -101,14 +104,8 @@
             </div> -->
 
             <!--Tabs and services section-->
-            <div>
-                <a class="nav-link openCartLink" href="#modal-cart">
-                    <i class="fas fa-shopping-cart"></i>
-                    Cart<span id="cart-badge" class="badge bg-dark"></span>
-                </a>
-            </div>
-            <div id="container-top">
 
+            <div id="container-top">
                 <div class="tabs navigation-way_4">
                     <div class="tabs__head">
                         <a href="#" data-tab-name="1" class="tabs__name active">Featured</a>
