--- a/index.html
+++ b/index.html
@@ -453,123 +453,15 @@
                     <p>Take your music with you wherever you go and enjoy the high-quality sound.</p>
                 </header>
                 <!--Carousel-->
-                <div class="Carousel">
+                <div class="carousel">
                     <div class="buttons">
-                        <button type="button" class="arrow_prev">previous
-                        </button>
+                        
+                        <button class="btn slide-prev">Prev</button>
                     </div>
                     <div class="products">
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/sony-yt555">
-                                    <div class="preview">
-                                        <img class="preview" alt="Sony YT555" src="img/new/sony-y.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/sony-yt555" class="text_link"> Sony YT555
-                                </a>
-                                <div class="price">
-                                    <span class="price">$140,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/jbl-pt-25">
-                                    <div class="preview">
-                                        <img class="preview" alt="JBL PT-25" src="img/new/jbl_pt25.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/jbl-pt-25" class="text_link"> JBL PT-25
-                                </a>
-                                <div class="price">
-                                    <span class="price">$180,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/jbl-rr56">
-                                    <div class="preview">
-                                        <img class="preview" alt="JBL RR-56" src="img/featured/jbl-rr.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/jbl-rr56" class="text_link"> JBL RR-56
-                                </a>
-                                <div class="price">
-                                    <span class="price">$110,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/jbl-gt345">
-                                    <div class="preview">
-                                        <img class="preview" alt="JBL GT-345" src="img/new/jbl_gt345.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/jbl-gt345" class="text_link"> JBL GT-345
-                                </a>
-                                <div class="price">
-                                    <span class="price">$120,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/jbl-rr55">
-                                    <div class="preview">
-                                        <img class="preview" alt="JBL RR-55" src="img/new/jbl_rr55.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/jbl-rr55" class="text_link"> JBL RR-55
-                                </a>
-                                <div class="price">
-                                    <span class="price">$110,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
-                        <article>
-                            <div class="product_card">
-                                <a href="/shop/jbl-or57">
-                                    <div class="preview">
-                                        <img class="preview" alt="JBL OR-57" src="img/new/jbl_or57.png">
-                                    </div>
-                                </a>
-                                <a href="/shop/jbl-or57" class="text_link"> JBL OR-57
-                                </a>
-                                <div class="price">
-                                    <span class="price">$98,00</span>
-                                </div>
-                                <div class="product_button">
-                                    <button type="button">Add to cart
-                                    </button>
-                                </div>
-                            </div>
-                        </article>
                     </div>
-                    <button type="button" class="arrow_next">next
-                    </button>
+                    
+                    <button class="btn slide-next">Next</button>
                 </div>
             </div>
             <div class="video">
@@ -966,6 +858,7 @@
     <script src="js/index.js"></script>
     <script src="js/modal-cart.js"></script>
     <script src="js/js-headphones-section.js"></script>
+    <script src="js/speakers-carousel.js"></script>
 </body>
 
 </html>
