--- a/index.html
+++ b/index.html
@@ -454,6 +454,30 @@
 
         <!--Fourth section (beginning)-->
         <section class="fourth-section">
+            <div class="mega-sale">
+                <div></div>
+            <div class="countdown-speakers">
+                <p class="countdown-speakers-title">SPEAKERS</p>
+                <p class="countdown-speakers-product">Bose Speaker</p>
+                <p class="countdown-speakers-product-model">G656-A</p>
+                <p class="Bose-speaker-price-old">$100</p>
+                <p class="Bose-speaker-price-new">$65</p>
+                <div class="countdown_speakers_sale">
+                    <div class="countdown_sale">
+                        <div class="day">time</div>
+                        <h3 class="redaout">days</h3>
+                    </div>
+                    <div class="countdown_sale">
+                        <div class="hour">time</div>
+                        <h3 class="redaout">hours</h3>
+                    </div>
+                    <div class="countdown_sale">
+                        <div class="minute">time</div>
+                        <h3 class="redaout">minute</h3>
+                    </div>
+                </div>
+            </div>
+            </div>
             <div class="Speakers navigation-way_1">
                 <header>
                     <h2>Speakers</h2>
@@ -863,6 +887,7 @@
     <script src="js/modal-cart.js"></script>
     <script src="js/js-headphones-section.js"></script>
     <script src="js/speakers-carousel.js"></script>
+    <script src="js/speakers-countdown.js"></script>
 </body>
 
 </html>
