edit html and css for Fourth Section

--- a/index.html
+++ b/index.html
@@ -475,21 +475,29 @@
                         <div class="minute">time</div>
                         <h3 class="redaout">minute</h3>
                     </div>
+                    <div class="countdown_sale">
+                        <div class="second">time</div>
+                        <h3 class="redaout">minute</h3>
+                    </div>
                 </div>
             </div>
             </div>
-            <div class="Speakers navigation-way_1">
+            <div class="speakers navigation-way_1">
                 <header>
-                    <h2>Speakers</h2>
+                    <h2 class="speakers-title">Speakers</h2>
                     <img class="logo" width="100" src="img/de2.svg" alt="logo">
                     <p>Take your music with you wherever you go and enjoy the high-quality sound.</p>
                 </header>
                 <!--Carousel-->
                 <div class="carousel">
-                    <button class="btn slide-prev">Prev</button>
+                    <div class="btn speakers-slide-prev">
+                        <img src="img/arrow-left.svg">
+                    </div>
                     <div class="products">
                     </div>
-                    <button class="btn slide-next">Next</button>
+                    <div class="btn speakers-slide-next">
+                        <img src="img/arrow-right.svg">
+                    </div>
                 </div>
             </div>
             <div class="video">
