Started work with accordeon

--- a/index.html
+++ b/index.html
@@ -143,6 +143,28 @@
             </div>
             </div>
         </section>
+        <section class="future-top-products">
+            <div class="future-top-products__container container-top">
+                <div data-spollers data-one-spoller class="future-top-products-accordeon">
+                    <button type="button" data-spoller class="future-top-products-accordeon__topic">Topic</button>
+                    <p class="future-top-products-accordeon__topic">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quam?
+                    </p>
+                </div>
+                <div class="future-top-products-accordeon">
+                    <button class="future-top-products-accordeon__topic">Topic2</button>
+                    <p class="future-top-products-accordeon__topic">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quam?
+                    </p>
+                </div>
+                <div class="future-top-products-accordeon">
+                    <button class="future-top-products-accordeon__topic">Topic3</button>
+                    <p class="future-top-products-accordeon__topic">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, quam?
+                    </p>
+                </div>
+            </div>
+        </section>
         <!--Second page-->
         <div>
             <section class="mindblowing__sound">
