--- a/index.html
+++ b/index.html
@@ -486,20 +486,20 @@
                 <p class="Bose-speaker-price-new">$65</p>
                 <div class="countdown_speakers_sale">
                     <div class="countdown_sale">
-                        <div class="day">time</div>
-                        <h3 class="redaout">days</h3>
+                        <div class="countdown_speakers_day">time</div>
+                        <h3 class="countdown_speakers_date">days</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="hour">time</div>
-                        <h3 class="redaout">hours</h3>
+                        <div class="countdown_speakers_hour">time</div>
+                        <h3 class="countdown_speakers_date">hours</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="minute">time</div>
-                        <h3 class="redaout">minute</h3>
+                        <div class="countdown_speakers_minute">time</div>
+                        <h3 class="countdown_speakers_date">minute</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="second">time</div>
-                        <h3 class="redaout">minute</h3>
+                        <div class="countdown_speakers_second">time</div>
+                        <h3 class="countdown_speakers_date">minute</h3>
                     </div>
                 </div>
             </div>
