edit css and html

--- a/index.html
+++ b/index.html
@@ -486,19 +486,19 @@
                 <p class="Bose-speaker-price-new">$65</p>
                 <div class="countdown_speakers_sale">
                     <div class="countdown_sale">
-                        <div class="countdown_speakers_day">time</div>
+                        <div class="countdown-speakers-day">time</div>
                         <h3 class="countdown_speakers_date">days</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="countdown_speakers_hour">time</div>
+                        <div class="countdown-speakers-hour">time</div>
                         <h3 class="countdown_speakers_date">hours</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="countdown_speakers_minute">time</div>
+                        <div class="countdown-speakers-minute">time</div>
                         <h3 class="countdown_speakers_date">minute</h3>
                     </div>
                     <div class="countdown_sale">
-                        <div class="countdown_speakers_second">time</div>
+                        <div class="countdown-speakers-second">time</div>
                         <h3 class="countdown_speakers_date">minute</h3>
                     </div>
                 </div>
