--- a/index.html
+++ b/index.html
@@ -523,9 +523,10 @@
                 </div>
             </div>
             <div class="video">
-                <h2 class="video-header">14 Hours of music</h2>
+                <h2 class="video-header">14 Hours of</h2>
+                <h2 class="video-header">Music</h2>
                 <p class="video-text">Enjoy freedom of movement with wireless headphones.</p>
-                <button class="play_button" type="button">Play</button>
+                <button class="play_button" type="button"><img src="img/play.svg"</button>
             </div>
         </section>
         <!--Fourth section (end)-->
