--- a/index.html
+++ b/index.html
@@ -526,7 +526,8 @@
                 <h2 class="video-header">14 Hours of</h2>
                 <h2 class="video-header">Music</h2>
                 <p class="video-text">Enjoy freedom of movement with wireless headphones.</p>
-                <button class="play_button" type="button"><img src="img/play.svg"</button>
+                <button class="play_button" type="button"><img src="img/play.svg"></button>
+                <p class="play-video">PLAY VIDEO</p>
             </div>
         </section>
         <!--Fourth section (end)-->
