--- a/index.html
+++ b/index.html
@@ -477,7 +477,31 @@
         <!--Fourth section (beginning)-->
         <section class="fourth-section">
             <div class="mega-sale">
-                <div></div>
+                <div class="countdown-airpulse">
+                    <p class="countdown-airpulse-title">HEADPHONES</p>
+                    <p class="countdown-airpulse-product">AirPulse R255</p>
+                    <p class="countdown-airpulse-product-model">Wireless</p>
+                    <p class="airpulse-price-old">$240</p>
+                    <p class="airpulse-price-new">$185</p>
+                    <div class="countdown_airpulse_sale">
+                        <div class="countdown_airpulse_sale_timer">
+                            <div class="countdown-airpulse-day">time</div>
+                            <h3 class="countdown_airpulse_date">days</h3>
+                        </div>
+                        <div class="countdown_airpulse_sale_timer">
+                            <div class="countdown-airpulse-hour">time</div>
+                            <h3 class="countdown_airpulse_date">hours</h3>
+                        </div>
+                        <div class="countdown_airpulse_sale_timer">
+                            <div class="countdown-airpulse-minute">time</div>
+                            <h3 class="countdown_airpulse_date">minute</h3>
+                        </div>
+                        <div class="countdown_airpulse_sale_timer">
+                            <div class="countdown-airpulse-second">time</div>
+                            <h3 class="countdown_airpulse_date">minute</h3>
+                        </div>
+                    </div>
+                </div>
                 <div class="countdown-speakers">
                     <p class="countdown-speakers-title">SPEAKERS</p>
                     <p class="countdown-speakers-product">Bose Speaker</p>
@@ -485,19 +509,19 @@
                     <p class="Bose-speaker-price-old">$100</p>
                     <p class="Bose-speaker-price-new">$65</p>
                     <div class="countdown_speakers_sale">
-                        <div class="countdown_sale">
+                        <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-day">time</div>
                             <h3 class="countdown_speakers_date">days</h3>
                         </div>
-                        <div class="countdown_sale">
+                        <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-hour">time</div>
                             <h3 class="countdown_speakers_date">hours</h3>
                         </div>
-                        <div class="countdown_sale">
+                        <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-minute">time</div>
                             <h3 class="countdown_speakers_date">minute</h3>
                         </div>
-                        <div class="countdown_sale">
+                        <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-second">time</div>
                             <h3 class="countdown_speakers_date">minute</h3>
                         </div>
@@ -920,6 +944,7 @@
     <script src="js/js-headphones-section.js"></script>
     <script src="js/speakers-carousel.js"></script>
     <script src="js/speakers-countdown.js"></script>
+    <script src="js/airpulse-coundown.js"></script>
 </body>
 
 </html>
