--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
     <script src="js/js-headphones-section.js"></script>
     <script src="js/speakers-carousel.js"></script>
     <script src="js/speakers-countdown.js"></script>
-    <script src="js/airpulse-coundown.js"></script>
+    <script src="js/airpulse-countdown.js"></script>
 </body>
 
 </html>
