--- a/index.html
+++ b/index.html
@@ -923,9 +923,8 @@
     <script src="js/js-headphones-section.js"></script>
     <script src="js/speakers-carousel.js"></script>
     <script src="js/speakers-countdown.js"></script>
-    <<<<<<< HEAD=======<script src="js/airpulse-countdown.js">
-        </script>
-        >>>>>>> 551285ce9baf1893afa962fdef051cc99a101f52
+    <script src="js/airpulse-countdown.js"></script>
+   
 </body>
 
 </html>
