--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                     <div class="btn speakers-slide-prev">
                         <img src="img/arrow-left.svg">
                     </div>
-                    <div class="products">
+                    <div class="speakers-products">
                     </div>
                     <div class="btn speakers-slide-next">
                         <img src="img/arrow-right.svg">
