--- a/index.html
+++ b/index.html
@@ -467,17 +467,20 @@
                             <div class="countdown-airpulse-day">time</div>
                             <h3 class="countdown_airpulse_date">days</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_airpulse_sale_timer">
                             <div class="countdown-airpulse-hour">time</div>
                             <h3 class="countdown_airpulse_date">hours</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_airpulse_sale_timer">
                             <div class="countdown-airpulse-minute">time</div>
-                            <h3 class="countdown_airpulse_date">minute</h3>
+                            <h3 class="countdown_airpulse_date">minutes</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_airpulse_sale_timer">
                             <div class="countdown-airpulse-second">time</div>
-                            <h3 class="countdown_airpulse_date">minute</h3>
+                            <h3 class="countdown_airpulse_date">seconds</h3>
                         </div>
                     </div>
                 </div>
@@ -492,17 +495,20 @@
                             <div class="countdown-speakers-day">time</div>
                             <h3 class="countdown_speakers_date">days</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-hour">time</div>
                             <h3 class="countdown_speakers_date">hours</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-minute">time</div>
-                            <h3 class="countdown_speakers_date">minute</h3>
+                            <h3 class="countdown_speakers_date">minutes</h3>
                         </div>
+                        <div class="speaker-vl"></div>
                         <div class="countdown_speaker_sale_timer">
                             <div class="countdown-speakers-second">time</div>
-                            <h3 class="countdown_speakers_date">minute</h3>
+                            <h3 class="countdown_speakers_date">seconds</h3>
                         </div>
                     </div>
                 </div>
