--- a/index.html
+++ b/index.html
@@ -583,33 +583,9 @@
             <!--roundabout brand logos-->
             <div class="cards-container">
 
-
-                <div class="Apple">
-                    <img src="img/logo-apple.svg" id="logoalla" alt="Apple">
-                </div>
-                <div class="Jbl">
-                    <img src="img/logo-jbl.svg" id="logoallj" alt="Jbl">
-                </div>
-                <div class="Beyerdynamic">
-                    <img src="img/logo-beyerdynamic.svg" id="logoall" alt="Beyerdynamic">
-                </div>
-                <div>
-                    <img src="img/logo-marshall.svg" id="logoallm" alt="Marshall">
-                </div>
-                <div class="Panasonic">
-                    <img src="img/logo-panasonic.svg" id="logoall" alt="Panasonic">
-                </div>
-                <div class="Samsung">
-                    <img src="img/logo-samsung.svg" id="logoall" alt="Samsung">
-                </div>
-                <div class="Sennheiser">
-                    <img src="img/logo-sennheiser.svg" id="logoallsen" alt="Sennheiser">
-                </div>
-                <div class="Sony">
-                    <img src="img/logo-sony.svg" id="logoalls" alt="Sony">
-                </div>
             </div>
-
+            <button class="btn slide-prev" id="slide-p">b</button>
+            <button class="btn slide-next" id="slide-n">n</button>
 
         </section>
         <!--roundabout reviews-->
@@ -922,6 +898,7 @@
     <script src="js/product-way.js"></script>
     <script src="js/audio-products-list.js"></script>
     <script src="js/js-headphones-section.js"></script>
+    <script src="js/brands-logo.js"></script>
 </body>
 
 </html>
